logs/dag_id=predict_values_TS_23/run_id=scheduled__2024-08-04T000000+0000/task_id=get_cases_dataset.create_morbidity_table/attempt=1.log
[2024-08-17T10:34:39.070+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-08-17T10:34:39.087+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: predict_values_TS_23.get_cases_dataset.create_morbidity_table scheduled__2024-08-04T00:00:00+00:00 [queued]>
[2024-08-17T10:34:39.096+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: predict_values_TS_23.get_cases_dataset.create_morbidity_table scheduled__2024-08-04T00:00:00+00:00 [queued]>
[2024-08-17T10:34:39.097+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2024-08-17T10:34:39.112+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): get_cases_dataset.create_morbidity_table> on 2024-08-04 00:00:00+00:00
[2024-08-17T10:34:39.123+0000] {warnings.py:110} WARNING - /home/airflow/.local/lib/python3.12/site-packages/airflow/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=48882) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-08-17T10:34:39.124+0000] {standard_task_runner.py:63} INFO - Started process 54961 to run task
[2024-08-17T10:34:39.126+0000] {standard_task_runner.py:90} INFO - Running: ['airflow', 'tasks', 'run', 'predict_values_TS_23', 'get_cases_dataset.create_morbidity_table', 'scheduled__2024-08-04T00:00:00+00:00', '--job-id', '138', '--raw', '--subdir', 'DAGS_FOLDER/etl.py', '--cfg-path', '/tmp/tmp5j7ja0fl']
[2024-08-17T10:34:39.129+0000] {standard_task_runner.py:91} INFO - Job 138: Subtask get_cases_dataset.create_morbidity_table
[2024-08-17T10:34:39.185+0000] {task_command.py:426} INFO - Running <TaskInstance: predict_values_TS_23.get_cases_dataset.create_morbidity_table scheduled__2024-08-04T00:00:00+00:00 [running]> on host 57503ef29846
[2024-08-17T10:34:39.284+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Ruslan Solarev' AIRFLOW_CTX_DAG_ID='predict_values_TS_23' AIRFLOW_CTX_TASK_ID='get_cases_dataset.create_morbidity_table' AIRFLOW_CTX_EXECUTION_DATE='2024-08-04T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-08-04T00:00:00+00:00'
[2024-08-17T10:34:39.285+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-08-17T10:34:39.295+0000] {sql.py:276} INFO - Executing: CREATE TABLE IF NOT EXISTS Morbidity (
            id SERIAL PRIMARY KEY,
            Date DATETIME,
            Country VARCHAR
            Count_Cases FLOAT
            is_Pred BOOLEAN
        )
[2024-08-17T10:34:39.305+0000] {base.py:84} INFO - Using connection ID 'postgres' for task execution.
[2024-08-17T10:34:39.315+0000] {base.py:84} INFO - Using connection ID 'postgres' for task execution.
[2024-08-17T10:34:39.368+0000] {sql.py:470} INFO - Running statement: CREATE TABLE IF NOT EXISTS Morbidity (
            id SERIAL PRIMARY KEY,
            Date DATETIME,
            Country VARCHAR
            Count_Cases FLOAT
            is_Pred BOOLEAN
        ), parameters: None
[2024-08-17T10:34:39.372+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-08-17T10:34:39.374+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 418, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 475, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: ОШИБКА:  ошибка синтаксиса (примерное положение: "Count_Cases")
LINE 5:             Count_Cases FLOAT
                    ^

[2024-08-17T10:34:39.386+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=predict_values_TS_23, task_id=get_cases_dataset.create_morbidity_table, run_id=scheduled__2024-08-04T00:00:00+00:00, execution_date=20240804T000000, start_date=20240817T103439, end_date=20240817T103439
[2024-08-17T10:34:39.404+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 138 for task get_cases_dataset.create_morbidity_table (ОШИБКА:  ошибка синтаксиса (примерное положение: "Count_Cases")
LINE 5:             Count_Cases FLOAT
                    ^
; 54961)
[2024-08-17T10:34:39.419+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-08-17T10:34:39.429+0000] {warnings.py:110} WARNING - /home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py:1296: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `airflow.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2024-08-17T10:34:39.444+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-08-17T10:34:39.448+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
